k8s/application/api.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: api-pod
  labels:
    app: api-app
spec:
  containers:
    - name: api-service
      image: ghcr.io/rykktiadloans/blog-api-service:v0.0.0-snapshot-3
      ports:
        - containerPort: 8081
      volumeMounts:
        - name: api-data
          mountPath: /workspace/uploaded-resources

  volumes:
    - name: api-data
      persistentVolumeClaim:
        claimName: api-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
