k8s/application/auth.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: auth-pod
  labels:
    app: auth-app
spec:
  containers:
    - name: auth-service
      image: ghcr.io/rykktiadloans/blog-auth-service:v0.0.0-snapshot-3
      ports:
        - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
